<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Base Score:"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/baseScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time Bonus:" 
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/timeScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmp"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Difficulty Multiplier:" 
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/multiplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmp"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Level Score:"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/lvlScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tmp"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Score:"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/totalScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/tmp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
        </TableRow>
        
    </TableLayout>

    <Button
        android:id="@+id/quitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/continueButton"
        android:layout_centerHorizontal="true"
        android:text="@string/quit" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/cont" />

    <TextView
        android:id="@+id/resultStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/lvlResult"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>